--- a/ex1_gauss_vs_BMS.ipynb
+++ b/ex1_gauss_vs_BMS.ipynb
@@ -588,10 +588,14 @@
   }
  ],
  "metadata": {
+  "title": "pyRiskTable: a Python package to generate weighted hazard scenarios",
+  "authors": [
+   { "name": "David Yang"}
+  ],
   "kernelspec": {
-   "display_name": "Python3 (MLenv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "mlenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -603,7 +607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.0"
   },
   "vscode": {
    "interpreter": {
